appId: com.vashuag.grocery
---
- launchApp:
    clearState: true
    permissions:
      all: allow
- tapOn:
    text: "Wait"
    optional: true
- assertVisible: "My Grocery Items"
- tapOn: "Add Item"
- assertVisible: "Front|Error:"
- pressKey: back
- assertVisible: "My Grocery Items"
