appId: com.vashuag.grocery
---
- launchApp:
    clearState: true
    permissions:
      all: allow
- tapOn:
    text: "Wait"
    optional: true
- assertVisible: "My Grocery Items"
- tapOn: "Load Demo Data"
- tapOn:
    id: "compare_item_button"
- assertVisible: "Item name"
- tapOn: "Compare"
- assertVisible:
    text: "Results for .*"
- pressKey: back
- assertVisible: "My Grocery Items"
